--- a/src/styles/gobackn.css
+++ b/src/styles/gobackn.css
@@ -1,23 +1,98 @@
 
 :root {
-    --sim-back-color: #23c495;
+    --btn-back-color: #23c495;
+    --btn-back-def-color: #e0e0e0;
 }
 
-.box-wrapper {
+.wrapper {
+
+    border: 1px solid black;
+    width: 50%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    border: 1px solid black;
+    justify-content: flex-start;
+    margin: 30px auto;
+    flex-direction: column;
+    height: 600px;
 
-    .top-wrapper {
-        display: inline-flex;
-        gap: 20px;
+    .btns {
 
-        button {
-            padding: 8px 15px;
-            background-color: var(--sim-back-color);
-            border-radius: 20px;
+        display: flex;
+        gap: 30px;  
+        justify-content: space-evenly;
+        align-items: center;
+        margin-top: 40px;
+
+        .btn {
+
+            background-color: var(--btn-back-color);
+            border: 1px solid;
+            border-radius: 18px;
+            padding: 5px 25px;
             color: white;
+            cursor: pointer;
         }
+
+        .pause-btn, .kill-btn {
+
+            background-color: var(--btn-back-def-color);
+            color: black;
+        }
+    }
+
+    .simulator-wrapper {
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        margin: 50px 0;
+        height:300px;
+        padding: 10px;
+
+        .wrap {
+
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            gap: 30px;
+            padding: 0 50px;
+            overflow: hidden;
+            position: relative;
+
+            .packets {
+
+                display: flex;
+                gap: 3px;
+
+                .packet {
+
+                    border: 1px solid black;
+                    padding: 10px 8px;
+                }
+            }
+        }
+
+        .details {
+
+            height: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .receiver-wrapper {
+
+            margin-left: 11px;
+        }
+    }
+
+    .legend-wrapper {
+
+        display: flex;
+        gap: 30px;
+        border: 1px solid black;
+        border-radius: 10px;
+        padding: 5px 20px;
     }
 }
